// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
[
  {
    "contexts": {
      "using": [
        "world_x",
      ],
    },
    "geometries": {
      "defined": [],
      "using": [
        "humanoid.custom",
        "cape",
      ],
    },
    "materials": {
      "defined": [],
      "using": [],
    },
    "queries": {
      "using": [
        "modified_distance_moved",
        "modified_move_speed",
        "life_time",
        "is_on_ground",
        "is_alive",
        "position_delta",
        "main_hand_item_use_duration",
        "main_hand_item_max_duration",
      ],
    },
    "temps": {
      "defined": [
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
      ],
      "using": [
        "foo",
      ],
    },
    "textures": {
      "defined": [],
      "using": [],
    },
    "variables": {
      "defined": [
        "is_holding_right",
        "is_blinking",
        "last_blink_time",
        "hand_bob",
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
        "attack_body_rot_y",
        "tcos0",
        "first_person_rotation_factor",
        "map_angle",
        "item_use_normalized",
      ],
      "using": [
        "is_holding_right",
        "is_blinking",
        "last_blink_time",
        "hand_bob",
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
        "attack_body_rot_y",
        "attack_time",
        "tcos0",
        "gliding_speed_value",
        "first_person_rotation_factor",
        "map_angle",
        "player_x_rotation",
        "item_use_normalized",
        "is_first_person",
        "map_face_icon",
      ],
    },
  },
  {
    "contexts": {
      "using": [
        "world_x",
      ],
    },
    "geometries": {
      "defined": [],
      "using": [
        "humanoid.custom",
        "cape",
      ],
    },
    "materials": {
      "defined": [],
      "using": [],
    },
    "queries": {
      "using": [
        "modified_distance_moved",
        "modified_move_speed",
        "life_time",
        "is_on_ground",
        "is_alive",
        "position_delta",
        "main_hand_item_use_duration",
        "main_hand_item_max_duration",
      ],
    },
    "temps": {
      "defined": [
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
      ],
      "using": [
        "foo",
      ],
    },
    "textures": {
      "defined": [],
      "using": [],
    },
    "variables": {
      "defined": [
        "is_holding_right",
        "is_blinking",
        "last_blink_time",
        "hand_bob",
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
        "attack_body_rot_y",
        "tcos0",
        "first_person_rotation_factor",
        "map_angle",
        "item_use_normalized",
      ],
      "using": [
        "is_holding_right",
        "is_blinking",
        "last_blink_time",
        "hand_bob",
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
        "attack_body_rot_y",
        "attack_time",
        "tcos0",
        "gliding_speed_value",
        "first_person_rotation_factor",
        "map_angle",
        "player_x_rotation",
        "item_use_normalized",
        "is_first_person",
        "map_face_icon",
      ],
    },
  },
]
`;

exports[` 2`] = `
[
  {
    "contexts": {
      "using": [
        "world_x",
      ],
    },
    "queries": {
      "using": [
        "modified_distance_moved",
        "modified_move_speed",
        "life_time",
        "is_on_ground",
        "is_alive",
        "position_delta",
        "main_hand_item_use_duration",
        "main_hand_item_max_duration",
      ],
    },
    "temps": {
      "defined": [
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
      ],
      "using": [
        "foo",
      ],
    },
    "variables": {
      "defined": [
        "is_holding_right",
        "is_blinking",
        "last_blink_time",
        "hand_bob",
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
        "attack_body_rot_y",
        "tcos0",
        "first_person_rotation_factor",
        "map_angle",
        "item_use_normalized",
      ],
      "using": [
        "is_holding_right",
        "is_blinking",
        "last_blink_time",
        "hand_bob",
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
        "attack_body_rot_y",
        "attack_time",
        "tcos0",
        "gliding_speed_value",
        "first_person_rotation_factor",
        "map_angle",
        "player_x_rotation",
        "item_use_normalized",
        "is_first_person",
        "map_face_icon",
      ],
    },
  },
  {
    "contexts": {
      "using": [
        "world_x",
      ],
    },
    "queries": {
      "using": [
        "modified_distance_moved",
        "modified_move_speed",
        "life_time",
        "is_on_ground",
        "is_alive",
        "position_delta",
        "main_hand_item_use_duration",
        "main_hand_item_max_duration",
      ],
    },
    "temps": {
      "defined": [
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
      ],
      "using": [
        "foo",
      ],
    },
    "variables": {
      "defined": [
        "is_holding_right",
        "is_blinking",
        "last_blink_time",
        "hand_bob",
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
        "attack_body_rot_y",
        "tcos0",
        "first_person_rotation_factor",
        "map_angle",
        "item_use_normalized",
      ],
      "using": [
        "is_holding_right",
        "is_blinking",
        "last_blink_time",
        "hand_bob",
        "helmet_layer_visible",
        "leg_layer_visible",
        "boot_layer_visible",
        "chest_layer_visible",
        "attack_body_rot_y",
        "attack_time",
        "tcos0",
        "gliding_speed_value",
        "first_person_rotation_factor",
        "map_angle",
        "player_x_rotation",
        "item_use_normalized",
        "is_first_person",
        "map_face_icon",
      ],
    },
  },
]
`;

exports[`Molang MolangFullSet 1`] = `
{
  "contexts": {
    "using": [
      "world_x",
    ],
  },
  "queries": {
    "using": [
      "modified_distance_moved",
      "modified_move_speed",
      "life_time",
      "is_on_ground",
      "is_alive",
      "position_delta",
      "main_hand_item_use_duration",
      "main_hand_item_max_duration",
    ],
  },
  "temps": {
    "defined": [
      "helmet_layer_visible",
      "leg_layer_visible",
      "boot_layer_visible",
      "chest_layer_visible",
    ],
    "using": [
      "foo",
    ],
  },
  "variables": {
    "defined": [
      "is_holding_right",
      "is_blinking",
      "last_blink_time",
      "hand_bob",
      "helmet_layer_visible",
      "leg_layer_visible",
      "boot_layer_visible",
      "chest_layer_visible",
      "attack_body_rot_y",
      "tcos0",
      "first_person_rotation_factor",
      "map_angle",
      "item_use_normalized",
    ],
    "using": [
      "is_holding_right",
      "is_blinking",
      "last_blink_time",
      "hand_bob",
      "helmet_layer_visible",
      "leg_layer_visible",
      "boot_layer_visible",
      "chest_layer_visible",
      "attack_body_rot_y",
      "attack_time",
      "tcos0",
      "gliding_speed_value",
      "first_person_rotation_factor",
      "map_angle",
      "player_x_rotation",
      "item_use_normalized",
      "is_first_person",
      "map_face_icon",
    ],
  },
}
`;

exports[`Molang MolangFullSet2 1`] = `
{
  "contexts": {
    "using": [
      "world_x",
    ],
  },
  "geometries": {
    "defined": [],
    "using": [
      "humanoid.custom",
      "cape",
    ],
  },
  "materials": {
    "defined": [],
    "using": [],
  },
  "queries": {
    "using": [
      "modified_distance_moved",
      "modified_move_speed",
      "life_time",
      "is_on_ground",
      "is_alive",
      "position_delta",
      "main_hand_item_use_duration",
      "main_hand_item_max_duration",
    ],
  },
  "temps": {
    "defined": [
      "helmet_layer_visible",
      "leg_layer_visible",
      "boot_layer_visible",
      "chest_layer_visible",
    ],
    "using": [
      "foo",
    ],
  },
  "textures": {
    "defined": [],
    "using": [],
  },
  "variables": {
    "defined": [
      "is_holding_right",
      "is_blinking",
      "last_blink_time",
      "hand_bob",
      "helmet_layer_visible",
      "leg_layer_visible",
      "boot_layer_visible",
      "chest_layer_visible",
      "attack_body_rot_y",
      "tcos0",
      "first_person_rotation_factor",
      "map_angle",
      "item_use_normalized",
    ],
    "using": [
      "is_holding_right",
      "is_blinking",
      "last_blink_time",
      "hand_bob",
      "helmet_layer_visible",
      "leg_layer_visible",
      "boot_layer_visible",
      "chest_layer_visible",
      "attack_body_rot_y",
      "attack_time",
      "tcos0",
      "gliding_speed_value",
      "first_person_rotation_factor",
      "map_angle",
      "player_x_rotation",
      "item_use_normalized",
      "is_first_person",
      "map_face_icon",
    ],
  },
}
`;
